[package]
name = "onobot"
version = "0.1.0"
authors = ["Xuanwo <github@xuanwo.io>"]
edition = "2018"

[dependencies]
telegram-bot = "0.8.0"
futures = "0.3.10"
tokio = { version = "1.8.4", features = ["full"] }
anyhow = "1.0.38"
hyper-proxy = "0.8.0"
hyper = "0.13.8"
serde = { version = "1.0.119", features = ["derive"] }
toml = "0.5.8"
clap = "3.0.0-beta.2"
log = "0.4.13"
env_logger = "0.8.2"
lru = "0.6.3"
rmp-serde = "0.15.1"
serde_json = "1.0.61"
sled = "0.34.6"
bincode = "1.3.1"
